<resources>
    <string name="app_name">ShoppingManagementApp</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone Number</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="product_name_hint">Product Name</string>
    <string name="quantity_hint">Quantity</string>
    <string name="add_product">Add Product</string>
    <string name="remove_product">Remove Product</string>
    <string name="welcome_message">Welcome to Shopping Management App</string>
    <string name="user_welcome_message">Welcome, %1$s\nPhone: %2$s</string>
    <string name="default_welcome_message">Welcome, User</string>
</resources>
